# discord-bot-template

./: .env.example  .gitignore  .pre-commit-config.yaml  GEMINI.md  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json  settings.local.json
alembic/: env.py
alembic/versions/: 11ad26d53a2d_add_version_to_teams.py  202511260001_22c0012f5007_initial_migration_with_users_table.py  202511271456_a4c872a7f6b8_change_user_id_to_ulid.py  202512051553_d71330ad48f7_rename_user_name_to_display_name.py  202512052358_11ad26d53a2d_add_version_to_teams.py  202512112324_482fd29108a3_add_version_to_users.py  5d421434096f_add_teams_table.py  b90f56e7dd7e_change_timestamp_columns_to_datetime_.py
app/: __main__.py  async_test.py  container.py  di_test.py  mediator.py  repository.py
app/api/: __main__.py  main.py
app/bot/: __main__.py
app/cogs/: __init__.py  teams_cog.py  users_cog.py
app/core/: result.py  result_usage_examples.md
app/infrastructure/: database.py  orm_mapping.py  orm_registry.py  unit_of_work.py
app/usecases/: result.py  users.py
docs/: ARCHITECTURE.md  ARCHITECTURE_IMPROVEMENTS.md  ISSUES_AND_IMPROVEMENTS.md  REVIEW_SUMMARY.md
docs/api/: implementation_guide.md
docs/core/: README.md
docs/domain/: DOMAIN_IMPLEMENTATION_GUIDE.md  README.md
docs/infrastructure/: DATABASE_MIGRATIONS.md
docs/plan/: DomainProtect.md
tests/: conftest.py  test_container.py  test_mediator.py
tests/core/: test_result.py  test_result_awaitable.py
tests/infrastructure/: test_generic_repository_error_cases.py  test_orm_mapping.py  test_repositories.py  (+3 more)
(+47 files in other folders)
