[project]
name = "app"
version = "0.1.0"
description = "Clean Architecture Discord Bot Template"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "discord-py>=2.5.2",
    "injector>=0.22.0",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.14.0",
]

[tool.coverage.run]
source = ["app", "tests"]
